pom and cql update
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>